# Logger

./: LICENSE  README.md  pyproject.toml  setup.cfg
eight_logger/: admin.py  apps.py  db_utils.py  email_utils.py  main.py  middleware.py  models.py  settings.py
eight_logger.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
eight_logger/migrations/: 0001_initial.py  0002_auto_20211202_0806.py  0003_emailrecipients_active.py
eight_logger/templates/eight_logger/: error.html
