[metadata]
name = eight_logger-sanip
version = 0.0.1
author = sanip
author_email = saneprijal@gmail.com
description = A Django app to manage logging
long_description = file: README.md
url = https://www.example.com
author = Sanip Rijal
author_email = saneprijal@gmail.com
license = BSD-3-Clause
classifiers = 
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires = 
    Django >= 3.2
